# X-mujoco

./: CMakeLists.txt  README.md  backend.json  bitbot_X.xml  bitbot_X_copy.xml  bitbot_hhfc.xml  inference_net.hpp  main.cpp  run.sh  user_func copy.cpp  user_func.cpp  user_func.h  vicon_capture.hpp
checkpoint/: policy_1 2.pt  policy_1.pt
inekf-warper/: CMakeLists.txt  ConfigParser.hpp  ContactEstimator.hpp  InEKF_Warper.hpp
inekf-warper/invariant-ekf/: InEKF.h  LICENSE  LieGroup.h  NoiseParams.h  RobotState.h  libdef.h
models/meshes/: Larm_shoulder_p.STL  Lleg_ankle_p.STL  Lleg_ankle_r.STL  Lleg_ankle_r1.STL  Lleg_hip_p.STL  Lleg_hip_r.STL  Lleg_hip_y.STL  Lleg_knee.STL  Rarm_shoulder_p.STL  Rleg_ankle_p.STL  Rleg_ankle_r.STL  Rleg_ankle_r1.STL  Rleg_hip_p.STL  Rleg_hip_r.STL  Rleg_hip_y.STL  Rleg_knee.STL  hip_pitch_l_link.STL  hip_pitch_r_link.STL  hip_roll_l_link.STL  hip_roll_r_link.STL  hip_yaw_l_link.STL  hip_yaw_r_link.STL  knee_pitch_l_link.STL  knee_pitch_r_link.STL  pelvis.STL  shoulder_roll_l_link.STL  shoulder_roll_r_link.STL  shoulder_yaw_l_link.STL  shoulder_yaw_r_link.STL  waist_link.STL
models/urdf/: hhfc-realfoot_1.urdf  hhfc.urdf  hhfc1.urdf  tiangong_modified_collision.urdf
models/xml/: hhfc.xml  hhfc_new.xml  tiangong.xml  tiangong_copy.xml
